# Ejercicio-1-distribuidos

./: .gitignore  CMakeLists.txt  README.md  app_cliente  build.sh
Report/: main.typ  uc3m_plantilla.typ
Versión distribuida/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Versión distribuida/include/: mensajes.h
Versión distribuida/src/: app_cliente.c  claves.c  proxy-mq.c  servidor-mq.c
Versión no distribuida/: CMakeLists.txt  Makefile
Versión no distribuida/src/: app_cliente.c
src/: app_cliente  app_cliente.c  calves.c
